# aprs-stream

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
crates/aprs-modem/: Cargo.toml
crates/aprs-modem/src/: audio.rs  config.rs  error.rs  lib.rs
crates/aprs-modem/src/afsk/: agc.rs  dpll.rs  mod.rs  oscillator.rs  slicer.rs
crates/aprs-modem/src/aprs/: mod.rs  text.rs
crates/aprs-modem/src/ax25/: frame.rs  mod.rs
crates/aprs-modem/src/dsp/: filter.rs  fir.rs  mod.rs
crates/aprs-modem/src/hdlc/: fec.rs  framer.rs  mod.rs
crates/aprs-modem/src/pipeline/: manager.rs  mod.rs  stream_decoder.rs
crates/aprs-modem/tests/: end_to_end.rs
crates/aprs-sdr/: Cargo.toml
crates/aprs-sdr/src/: channelize.rs  device.rs  fm.rs  lib.rs  main.rs  source.rs
crates/aprs-sdr/tests/: loopback.rs
crates/aprs-stream/: Cargo.toml
crates/aprs-stream/src/: codec.rs  emit.rs  lib.rs  proto.rs  subscribe.rs
crates/aprs-stream/tests/: loopback.rs
crates/aprs-streamd/: Cargo.toml
crates/aprs-streamd/src/: config.rs  main.rs
deploy/: README.md  aprs-streamd.default  aprs-streamd.service  install.sh  release.sh  sdr-override.conf  uninstall.sh
deploy/debian/: postinst  postrm
docs/: rtpigate-refactor-plan.md
examples/echo-consumer/: Cargo.toml
examples/echo-consumer/src/: main.rs
