[package]
name = "aprs-sdr"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "SDR front-end spike: RTL-SDR -> fast-convolution channelizer -> FM demod -> APRS decode"

[dependencies]
aprs-modem = { path = "../aprs-modem" }
rtl-sdr-rs = "0.1"
rustfft = "6"
num-complex = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
