[package]
name = "aprs-stream"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared schema + CBOR codec + UDP transport for the disaggregated APRS pipeline"

[dependencies]
aprs-decode = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
