[package]
name = "echo-consumer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal aprs-stream subscriber: join the group and print decoded frames"
publish = false

[dependencies]
aprs-stream = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = "0.8"
